# artwork

./: .gitignore  Attribution  Makefile  README.md  meson.build  mkrelease.sh
.github/ISSUE_TEMPLATE/: submit-background.yml
backgrounds/: meson.build  solus-wallpapers.xml.in
icons/: meson.build
license/: LICENSE.CCBY-SA-4.0  license_AL  license_AS  license_CS  license_DH  license_FC  license_J  license_JF  license_JH  license_JM  license_JR  license_MN  license_MS  license_NS  license_P  license_PC  license_RP  license_TR  license_nasa
scripts/: mkrelease.sh  optimizeImage.sh
tooling/: go.mod  main.go  structs.go
